--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #products-from-api {
-    background-color: salmon;
+    background-color: pink;
     padding: 10px;
     margin: 10px;
 }
@@ -11,7 +11,7 @@
 }
 
 .div1 {
-    background-color: rgb(241, 108, 108);
+    background-color: salmon;
     padding: 10px;
     margin: 10px;
 }
